multi-role sync update: 2026-02-26 06:00

--- a/data/finance/tasks.json
+++ b/data/finance/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-25T14:09:21Z",
+  "updated_at": "2026-02-26T06:00:00Z",
   "tasks": [
     {
       "title": "每日美股台股匯報",
@@ -83,8 +83,8 @@
     },
     {
       "title": "散熱族群股價追蹤(早)",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -92,21 +92,21 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T14:08:35Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
       "title": "散熱族群股價追蹤",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "阻塞",
+      "next_step": "",
       "owner_role": "",
-      "blocked_reason": "-",
+      "blocked_reason": "系統排程異常，請稍後重試",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T14:09:21Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -123,7 +123,5 @@
       "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     }
-  ],
-  "source": "dashboard:/Users/sunglin/Documents/線上儀表板",
-  "schema_version": "2026-02"
+  ]
 }
