--- a/tasks.json
+++ b/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-25T07:54:37Z",
+  "updated_at": "2026-02-26T06:00:01Z",
   "categories": [
     "才多多",
     "顧問",
@@ -7,286 +7,5 @@
     "理財",
     "系統"
   ],
-  "items": [
-    {
-      "category": "系統",
-      "title": "daily_dashboard_update",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "Context Token優化監控",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "自我檢測",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "每日美股台股匯報",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "工作流每日檢查_0810",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "Mac備忘錄AI轉運分析處理",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "郵件分類檢查-早上",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "台積電J值追蹤提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "0050 J值買點提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "郵件附件監看",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "國泰信用卡-LinePay點數扣點提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "BNI例會連動檢查-國定假日跳過",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "兆鯨明天任務提醒",
-      "status": "已完成",
-      "next_action": "取消",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "可成科技_面試結果確認",
-      "status": "已完成",
-      "next_action": "已完成",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "郵件分類檢查-下午",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "確認澤于OpenClaw安裝時間",
-      "status": "已完成",
-      "next_action": "已完成",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "每日Token使用記錄",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "記憶體優化提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "AI記憶與配置自動備份",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "iCloud整理檢測_0310",
-      "status": "已完成",
-      "next_action": "取消",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "iCloud安全整理_0330",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "聖發_3名入職建檔提醒",
-      "status": "已完成",
-      "next_action": "取消",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "散熱族群股價追蹤(早)",
-      "status": "已完成",
-      "next_action": "取消",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "週五過濾材提醒-動態",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "散熱族群股價追蹤",
-      "status": "已完成",
-      "next_action": "取消",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "記憶檔案每月歸檔",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "兆鯨資料每日同步與索引",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "工作流週一檢查_0840",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "才多多週會重點確認提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "三年免招募費專案追蹤提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "OpenClaw 每週版本檢查",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "咖啡提貨券到期進度提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "每月定期定額規劃",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "才多多財務分析月報更新",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "農曆三月劫財月-台積電買點提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    }
-  ]
+  "items": []
 }
