--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,62 +1,6 @@
 {
-  "updated_at": "2026-02-26T22:00:37Z",
+  "updated_at": "2026-02-26T06:00:00Z",
   "tasks": [
-    {
-      "title": "OpenClaw 設定與資料備份",
-      "status": "已完成",
-      "next_step": "備份輸出於 /Users/sunglin/Documents/openclaw-ops/backups/latest",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-25T13:00:50Z",
-      "source": "auto"
-    },
-    {
-      "title": "OpenClaw 記憶與效能優化設定",
-      "status": "已完成",
-      "next_step": "ttl=30m, maxHistoryShare=0.7, maxConcurrent=3, subagents=4",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-25T13:00:50Z",
-      "source": "auto"
-    },
-    {
-      "title": "OpenClaw 模型與授權狀態",
-      "status": "已完成",
-      "next_step": "model=openai-codex/gpt-5.2；授權到期=2026-03-04 01:39:31 CST",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-25T13:00:50Z",
-      "source": "auto"
-    },
-    {
-      "title": "OpenClaw 連線健康檢查",
-      "status": "已完成",
-      "next_step": "正常（2026-02-25T13:35:19+0800）",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-25T13:00:50Z",
-      "source": "auto"
-    },
     {
       "title": "cron 每日任務自動化（重設狀態）",
       "status": "已完成",
@@ -72,7 +16,7 @@
     },
     {
       "title": "NotebookLM Skill 開發",
-      "status": "已完成",
+      "status": "待處理",
       "next_step": "規劃草稿在 dev/notebooklm-skill.md",
       "owner_role": "開發優化師",
       "blocked_reason": "-",
@@ -81,7 +25,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z"
+      "updated_at": "2026-02-22T15:15:00Z"
     },
     {
       "title": "儀表板視覺老花優化",
@@ -163,8 +107,8 @@
     },
     {
       "title": "確認明晚行程",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -172,7 +116,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-23T14:32:09Z",
       "source": "auto"
     },
     {
@@ -359,8 +303,8 @@
     },
     {
       "title": "兆鯨明天任務提醒",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -368,13 +312,13 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
       "title": "可成科技_面試結果確認",
-      "status": "已完成",
-      "next_step": "-",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -382,7 +326,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -401,8 +345,8 @@
     },
     {
       "title": "確認澤于OpenClaw安裝時間",
-      "status": "已完成",
-      "next_step": "-",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -410,7 +354,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -457,16 +401,16 @@
     },
     {
       "title": "iCloud整理檢測_0310",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "阻塞",
+      "next_step": "",
       "owner_role": "",
-      "blocked_reason": "-",
+      "blocked_reason": "cron announce delivery failed",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -485,8 +429,8 @@
     },
     {
       "title": "聖發_3名入職建檔提醒",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -494,13 +438,13 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
       "title": "散熱族群股價追蹤(早)",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "待處理",
+      "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -508,7 +452,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -527,16 +471,16 @@
     },
     {
       "title": "散熱族群股價追蹤",
-      "status": "已完成",
-      "next_step": "取消",
+      "status": "阻塞",
+      "next_step": "",
       "owner_role": "",
-      "blocked_reason": "-",
+      "blocked_reason": "cron announce delivery failed",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-25T13:31:52Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -679,7 +623,5 @@
       "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     }
-  ],
-  "source": "dashboard:/Users/sunglin/Documents/線上儀表板",
-  "schema_version": "2026-02"
+  ]
 }
