--- a/data/openclaw/client_projects.json
+++ b/data/openclaw/client_projects.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-26T15:41:41Z",
+  "updated_at": "2026-02-26T23:30:52Z",
   "source_csv": "/Users/sunglin/Library/Mobile Documents/com~apple~CloudDocs/caiduo才多_工作空間/昌松_客戶專案帳務/昌松_客戶專案台帳.csv",
   "summary": {
     "total_items": 1,
@@ -43,5 +43,7 @@
         }
       ]
     }
-  ]
+  ],
+  "source": "dashboard:/Users/sunglin/Documents/線上儀表板",
+  "schema_version": "2026-02"
 }
