--- a/data/personal/tasks.json
+++ b/data/personal/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-26T16:43:58Z",
+  "updated_at": "2026-02-26T23:30:52Z",
   "tasks": [
     {
       "title": "上海信用卡扣款 $125,744",
@@ -12,7 +12,7 @@
       "due": "2026/2/28",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-26T16:43:58Z"
+      "updated_at": "2026-02-26T23:30:52Z"
     },
     {
       "title": "國泰信用卡繳款 $2,618",
@@ -40,5 +40,7 @@
       "freq": "-",
       "updated_at": "2026-02-22T15:05:00Z"
     }
-  ]
+  ],
+  "source": "dashboard:/Users/sunglin/Documents/線上儀表板",
+  "schema_version": "2026-02"
 }
