--- a/data/caitodo/tasks.json
+++ b/data/caitodo/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-25T14:24:51Z",
+  "updated_at": "2026-02-27T12:22:00Z",
   "tasks": [
     {
       "title": "可成科技：職缺停止招募",
@@ -44,9 +44,9 @@
       "source": "sync"
     },
     {
-      "title": "聖發：3名入職建檔（3/2入職）",
+      "title": "可成：3名入職建檔（3/2入職）",
       "status": "待處理",
-      "next_step": "入職前完成建檔/文件備齊",
+      "next_step": "入職前完成建檔/文件備齊（聖發已於本週一入職）",
       "owner_role": "才多多",
       "blocked_reason": "-",
       "priority": "urgent",
@@ -111,6 +111,20 @@
       "freq": "-",
       "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
+    },
+    {
+      "title": "聖發：本週一入職已完成建檔確認",
+      "status": "已完成",
+      "next_step": "-",
+      "owner_role": "才多多",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "2026/2/24",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-27T20:22:00Z",
+      "source": "manual-fix"
     }
   ],
   "source": "dashboard:/Users/sunglin/Documents/線上儀表板",
