--- a/data/personal/tasks.json
+++ b/data/personal/tasks.json
@@ -41,6 +41,6 @@
       "updated_at": "2026-02-22T15:05:00Z"
     }
   ],
-  "source": "dashboard:/Users/sunglin/Documents/線上儀表板",
+  "source": "dashboard:/Users/sung/Documents/線上儀表板",
   "schema_version": "2026-02"
 }
