--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -401,10 +401,10 @@
     },
     {
       "title": "iCloud整理檢測_0310",
-      "status": "阻塞",
-      "next_step": "",
+      "status": "已完成",
+      "next_step": "已取消（不再追蹤）",
       "owner_role": "",
-      "blocked_reason": "cron announce delivery failed",
+      "blocked_reason": "-",
       "priority": "normal",
       "type": "task",
       "due": "-",
@@ -443,8 +443,8 @@
     },
     {
       "title": "散熱族群股價追蹤(早)",
-      "status": "待處理",
-      "next_step": "",
+      "status": "已完成",
+      "next_step": "已停用（dashboard 不再追蹤）",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -471,10 +471,10 @@
     },
     {
       "title": "散熱族群股價追蹤",
-      "status": "阻塞",
-      "next_step": "",
+      "status": "已完成",
+      "next_step": "已停用（dashboard 不再追蹤）",
       "owner_role": "",
-      "blocked_reason": "cron announce delivery failed",
+      "blocked_reason": "-",
       "priority": "normal",
       "type": "task",
       "due": "-",
