caitodo: tag 趙千慧 case as 成大人力/藍領移工/看護工

--- a/data/caitodo/tasks.json
+++ b/data/caitodo/tasks.json
@@ -15,6 +15,8 @@
       "updated_at": "2026-03-01T03:04:00Z",
       "tags": [
         "客戶",
+        "成大人力",
+        "藍領移工",
         "看護工",
         "介紹",
         "成大確認"
